--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,46 @@
-/Netflix.class
+/398818RXBF.jpg
+/BinaryBlaster.class
+/Cat.class
+/Celeberty.class
+/ChuckleClicker.class
+/CowTimer.class
+/DuellingButtons.class
+/FortuneTeller.class
+/Fortuneball.jpg
+/GridWorld.class
+/HolidayCard.class
+/Houses.class
+/Jeopardy.class
+/Kanvar.class
+/Main.class
 /Movie1.class
-/Movie2.class
-/Movie.class
+/Netflix.class
+/NetflixQueue.class
+/PhotoAlbum.class
+/Popcorn.class
+/ScaryMaze.class
+/ScaryMaze.jpg
+/ScaryMaze.png
+/SeaCreature.class
+/Smurf.class
+/SmurfRunner.class
+/Spiral3.class
+/animal.class
+/animal1.class
+/base (1).wav
+/base.wav
+/classCat.class
+/cowTimer1.class
+/cymbal.jpg
+/dizytortoise.class
+/drumKit.class
+/foursquare.class
+/harryPotter.class
+/joke.wav
+/photoQuiz.class
+/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
+/scary_clown_faces-1.jpg
+/triangleshell2.class
+/weirdman.jpg
+/fortuneCookie.class
+/chuckel.class
