--- a/.classpath
+++ b/.classpath
@@ -3,7 +3,7 @@
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER"/>
 	<classpathentry kind="con" path="org.eclipse.jdt.junit.JUNIT_CONTAINER/4"/>
-	<classpathentry kind="lib" path="/Users/Guest/Google Drive/league-jars/javazoom.jar"/>
 	<classpathentry kind="lib" path="lib/twitter4j-core-3.0.5.jar"/>
+	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/javazoom.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
