--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,60 @@
+/398818RXBF.jpg
+/Fortuneball.jpg
+/I Like Chicken (Sing-along).mp3
+/ScaryMaze.jpg
+/ScaryMaze.png
+/base (1).wav
+/base.wav
+/cymbal.jpg
+/joke.wav
+/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
+/scary_clown_faces-1.jpg
+/weirdman.jpg
+/BinaryBlaster.class
+/BinaryC.class
+/Cat.class
+/Celeberty.class
+/ChuckleClicker.class
+/CowTimer.class
+/Dude.class
+/DudeTest.class
+/DuellingButtons.class
+/FortuneTeller.class
+/GridWorld.class
+/HolidayCard.class
+/Houses.class
+/Jeopardy.class
+/Jukebox.class
+/Kanvar.class
+/Main.class
+/Microwave.class
+/Movie1.class
+/Netflix.class
+/NetflixQueue.class
+/PhotoAlbum.class
+/PigLatin.class
+/Popcorn.class
+/ScaryMaze.class
+/SeaCreature.class
+/SensitiveKeyboard.class
+/Smurf.class
+/SmurfRunner.class
+/Song$1.class
+/Song.class
+/Spiral3.class
 /TypingTutor.class
-/JFrame.class
+/WritingMethod.class
+/animal.class
+/animal1.class
+/chuckel.class
+/classCat.class
+/cowTimer1.class
+/dizytortoise.class
+/drumKit.class
+/fortuneCookie.class
+/foursquare.class
+/harryPotter.class
+/photoQuiz.class
+/triangleshell2.class
+/Vault.class
+/JamesBond.class
