--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,15 +1,3 @@
-/398818RXBF.jpg
-/Fortuneball.jpg
-/I Like Chicken (Sing-along).mp3
-/ScaryMaze.jpg
-/ScaryMaze.png
-/base (1).wav
-/base.wav
-/cymbal.jpg
-/joke.wav
-/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
-/scary_clown_faces-1.jpg
-/weirdman.jpg
 /BinaryBlaster.class
 /BinaryC.class
 /Cat.class
@@ -23,6 +11,7 @@
 /GridWorld.class
 /HolidayCard.class
 /Houses.class
+/JamesBond.class
 /Jeopardy.class
 /Jukebox.class
 /Kanvar.class
@@ -42,7 +31,9 @@
 /Song$1.class
 /Song.class
 /Spiral3.class
+/TurtlePond.class
 /TypingTutor.class
+/Vault.class
 /WritingMethod.class
 /animal.class
 /animal1.class
@@ -56,5 +47,6 @@
 /harryPotter.class
 /photoQuiz.class
 /triangleshell2.class
-/Vault.class
-/JamesBond.class
+/Code4Life.class
+/tictactoe.class
+/Tictactoe.class
