--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,20 @@
+/BinaryBlaster.class
+/BinaryC.class
+/Cat.class
+/Celeberty.class
+/ChuckleClicker.class
+/Code4Life.class
+/CowTimer.class
+/Dude.class
+/DudeTest.class
+/DuellingButtons.class
+/FortuneTeller.class
+/GridWorld1.class
+/HarryPotter1.class
+/HolidayCard.class
+/Houses.class
+/JamesBond.class
+/Jeopardy.class
 /Jukebox.class
 /Kanvar.class
 /Main.class
@@ -34,3 +51,4 @@
 /harryPotter.class
 /photoQuiz.class
 /triangleshell2.class
+/Kanvar2.class
