--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,17 @@
+/398818RXBF.jpg
+/Fortuneball.jpg
+/I Like Chicken (Sing-along).mp3
+/ScaryMaze.jpg
+/ScaryMaze.png
+/base (1).wav
+/base.wav
+/cymbal.jpg
+/gridworld.jar
+/gridworld2.jar
+/joke.wav
+/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
+/scary_clown_faces-1.jpg
+/weirdman.jpg
 /BinaryBlaster.class
 /BinaryC.class
 /Cat.class
@@ -17,6 +31,7 @@
 /Jeopardy.class
 /Jukebox.class
 /Kanvar.class
+/Kanvar2.class
 /Main.class
 /Microwave.class
 /Movie1.class
@@ -51,4 +66,4 @@
 /harryPotter.class
 /photoQuiz.class
 /triangleshell2.class
-/Kanvar2.class
+/slotMachine.class
