--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,69 +1,2 @@
-/398818RXBF.jpg
-/Fortuneball.jpg
-/I Like Chicken (Sing-along).mp3
-/ScaryMaze.jpg
-/ScaryMaze.png
-/base (1).wav
-/base.wav
-/cymbal.jpg
-/gridworld.jar
-/gridworld2.jar
-/joke.wav
-/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
-/scary_clown_faces-1.jpg
-/weirdman.jpg
-/BinaryBlaster.class
-/BinaryC.class
-/Cat.class
-/Celeberty.class
-/ChuckleClicker.class
-/Code4Life.class
-/CowTimer.class
-/Dude.class
-/DudeTest.class
-/DuellingButtons.class
-/FortuneTeller.class
-/GridWorld1.class
-/HarryPotter1.class
-/HolidayCard.class
-/Houses.class
-/JamesBond.class
-/Jeopardy.class
-/Jukebox.class
-/Kanvar.class
-/Kanvar2.class
-/Main.class
-/Microwave.class
-/Movie1.class
-/Netflix.class
-/NetflixQueue.class
-/PhotoAlbum.class
-/PigLatin.class
-/Popcorn.class
-/ScaryMaze.class
-/SeaCreature.class
-/SensitiveKeyboard.class
-/Smurf.class
-/SmurfRunner.class
-/Song$1.class
-/Song.class
-/Spiral3.class
-/Tictactoe.class
-/TurtlePond.class
-/TypingTutor.class
-/Vault.class
-/WritingMethod.class
-/animal.class
-/animal1.class
-/chuckel.class
-/classCat.class
-/cowTimer1.class
-/dizytortoise.class
-/drumKit.class
-/drumKit2.class
-/fortuneCookie.class
-/foursquare.class
-/harryPotter.class
-/photoQuiz.class
-/triangleshell2.class
-/slotMachine.class
+/month.class
+/Month.class
