spongebob, Backpack, gift

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,37 @@
-/month.class
-/Month.class
+/SensitiveKeyboard.class
+/Smurf.class
+/SmurfRunner.class
+/Spiral3.class
+/Tictactoe.class
+/TurtlePond.class
+/TypingTutor.class
+/Vault.class
+/WritingMethod.class
+/animal.class
+/animal1.class
+/chuckel.class
+/classCat.class
+/cowTimer1.class
+/dizytortoise.class
+/drumKit.class
+/drumKit2.class
+/fortuneCookie.class
+/foursquare.class
+/harryPotter.class
+/photoQuiz.class
+/slotMachine.class
+/triangleshell2.class
+/Snake.class
+/Snake2.class
+/SeaCreture.class
+/SeaCreature1.class
+/SeaCreature.class
+/SeaCreatureRunner.class
+/Box.class
+/Present.class
+/BackPack.class
+/Backpack.class
+/Pencil.class
+/Ruler.class
+/Supplies.class
+/Textbook.class
