--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,6 +1,32 @@
+/FortuneTeller.class
+/GridWorld1.class
+/HarryPotter1.class
+/HolidayCard.class
+/Houses.class
+/JamesBond.class
+/Jeopardy.class
+/Jukebox.class
+/Kanvar.class
+/Kanvar2.class
+/Main.class
+/Microwave.class
+/Month.class
+/Movie1.class
+/Netflix.class
+/NetflixQueue.class
+/PhotoAlbum.class
+/PigLatin.class
+/Popcorn.class
+/ScaryMaze.class
+/SeaCreature1.class
+/SeaCreatureRunner.class
 /SensitiveKeyboard.class
 /Smurf.class
 /SmurfRunner.class
+/Snake.class
+/Snake2.class
+/Song$1.class
+/Song.class
 /Spiral3.class
 /Tictactoe.class
 /TurtlePond.class
@@ -21,17 +47,9 @@
 /photoQuiz.class
 /slotMachine.class
 /triangleshell2.class
-/Snake.class
-/Snake2.class
-/SeaCreture.class
-/SeaCreature1.class
-/SeaCreature.class
-/SeaCreatureRunner.class
-/Box.class
-/Present.class
-/BackPack.class
-/Backpack.class
-/Pencil.class
-/Ruler.class
-/Supplies.class
-/Textbook.class
+/Dwarf.class
+/RunnerDwarfs.class
+/SoupMaker.class
+/CupOfSoup.class
+/Kettle$Water.class
+/Kettle.class
