I did dueling Buttons and popcorn

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,17 @@
+/Backpack.class
+/BinaryBlaster.class
+/BinaryC.class
+/Box.class
+/Cat.class
+/Celeberty.class
+/ChuckleClicker.class
+/Code4Life.class
+/CowTimer.class
+/CupOfSoup.class
+/Dude.class
+/DudeTest.class
+/DuellingButtons.class
+/Dwarf.class
 /FortuneTeller.class
 /GridWorld1.class
 /HarryPotter1.class
@@ -8,15 +22,21 @@
 /Jukebox.class
 /Kanvar.class
 /Kanvar2.class
+/Kettle$Water.class
+/Kettle.class
 /Main.class
 /Microwave.class
 /Month.class
 /Movie1.class
 /Netflix.class
 /NetflixQueue.class
+/Pencil.class
 /PhotoAlbum.class
 /PigLatin.class
 /Popcorn.class
+/Present.class
+/Ruler.class
+/RunnerDwarfs.class
 /ScaryMaze.class
 /SeaCreature1.class
 /SeaCreatureRunner.class
@@ -27,7 +47,10 @@
 /Snake2.class
 /Song$1.class
 /Song.class
+/SoupMaker.class
 /Spiral3.class
+/Supplies.class
+/Textbook.class
 /Tictactoe.class
 /TurtlePond.class
 /TypingTutor.class
@@ -47,9 +70,8 @@
 /photoQuiz.class
 /slotMachine.class
 /triangleshell2.class
-/Dwarf.class
-/RunnerDwarfs.class
-/SoupMaker.class
-/CupOfSoup.class
-/Kettle$Water.class
-/Kettle.class
+/Popcorn2.class
+/Microwave2.class
+/DuellingButtons2.class
+/SimonSays.class
+/SimonSaysRecipe.class
