--- a/.classpath
+++ b/.classpath
@@ -6,5 +6,6 @@
 	<classpathentry kind="lib" path="lib/twitter4j-core-3.0.5.jar"/>
 	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/javazoom.jar"/>
 	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/gridworld.jar"/>
+	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/Tortoise.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
