--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,3 +1,4 @@
+/398818RXBF.jpg
 /Backpack.class
 /BinaryBlaster.class
 /BinaryC.class
@@ -5,6 +6,7 @@
 /Cat.class
 /Celeberty.class
 /ChuckleClicker.class
+/ChuckleClicker2.class
 /Code4Life.class
 /CowTimer.class
 /CupOfSoup.class
@@ -14,10 +16,12 @@
 /DuellingButtons2.class
 /Dwarf.class
 /FortuneTeller.class
+/Fortuneball.jpg
 /GridWorld1.class
 /HarryPotter1.class
 /HolidayCard.class
 /Houses.class
+/I Like Chicken (Sing-along).mp3
 /JamesBond.class
 /Jeopardy.class
 /Jukebox.class
@@ -41,6 +45,8 @@
 /Ruler.class
 /RunnerDwarfs.class
 /ScaryMaze.class
+/ScaryMaze.jpg
+/ScaryMaze.png
 /SeaCreature1.class
 /SeaCreatureRunner.class
 /SensitiveKeyboard.class
@@ -61,14 +67,27 @@
 /Vault.class
 /WritingMethod.class
 /animal1.class
+/base (1).wav
+/base.wav
 /chuckel.class
 /classCat.class
 /cowTimer1.class
+/cymbal.jpg
 /drumKit.class
 /drumKit2.class
 /fortuneCookie.class
+/gridworld.jar
+/gridworld2.jar
 /harryPotter.class
+/joke.wav
 /photoQuiz.class
+/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
+/scary_clown_faces-1.jpg
 /slotMachine.class
 /triangleshell2.class
-/ChuckleClicker2.class
+/weirdman.jpg
+/SimonSays.class
+/leftArrow.png
+/upArrow.png
+/rightArrow.jpg
+/downArrow.jpg
