--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,63 +1,1 @@
-/CupOfSoup.class
-/Dwarf.class
-/FortuneTeller.class
-/GridWorld1.class
-/HarryPotter1.class
-/HolidayCard.class
-/Houses.class
-/JamesBond.class
-/Jeopardy.class
-/Jukebox.class
-/Kanvar.class
-/Kanvar2.class
-/Kettle$Water.class
-/Kettle.class
-/Main.class
-/Microwave.class
-/Microwave2.class
-/Month.class
-/Movie1.class
-/Netflix.class
-/NetflixQueue.class
-/PhotoAlbum.class
-/PigLatin.class
-/Popcorn.class
-/Popcorn2.class
-/RunnerDwarfs.class
-/ScaryMaze.class
-/SeaCreature1.class
-/SeaCreatureRunner.class
-/SensitiveKeyboard.class
-/SimonSays.class
-/SimonSaysRecipe.class
-/Smurf.class
-/SmurfRunner.class
-/Snake.class
-/Snake2.class
-/Song$1.class
-/Song.class
-/SoupMaker.class
-/Spiral3.class
-/Tictactoe.class
-/TurtlePond.class
-/TypingTutor.class
-/Vault.class
-/WritingMethod.class
-/animal1.class
-/chuckel.class
-/classCat.class
-/cowTimer1.class
-/drumKit.class
-/drumKit2.class
-/fortuneCookie.class
-/harryPotter.class
-/photoQuiz.class
-/slotMachine.class
-/triangleshell2.class
-/BookOfIllusions.class
-/images.png
-/Pony.png
-/My.jpg
-/PhotoQuiz1.class
-/foursquare.class
-/Name.class
+/SeaCreature.class
