--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,2 +1,102 @@
-/CoinChanger.class
+/398818RXBF.jpg
+/Backpack.class
+/BinaryBlaster.class
+/BinaryC.class
+/BookOfIllusions.class
+/Box.class
+/Cat.class
+/Celeberty.class
 /ChangeMaker.class
+/ChuckleClicker.class
+/ChuckleClicker2.class
+/Code4Life.class
+/CoinChanger.class
+/CowTimer.class
+/Dude.class
+/DudeTest.class
+/DuellingButtons.class
+/DuellingButtons2.class
+/Dwarf.class
+/Fortuneball.jpg
+/I Like Chicken (Sing-along).mp3
+/My.jpg
+/Pencil.class
+/Pony.png
+/Present.class
+/Ruler.class
+/ScaryMaze.jpg
+/ScaryMaze.png
+/Supplies.class
+/Textbook.class
+/base (1).wav
+/base.wav
+/cymbal.jpg
+/downArrow.jpg
+/gridworld.jar
+/gridworld2.jar
+/images.png
+/joke.wav
+/leftArrow.png
+/rightArrow.jpg
+/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
+/scary_clown_faces-1.jpg
+/upArrow.png
+/weirdman.jpg
+/CupOfSoup.class
+/FortuneTeller.class
+/GridWorld1.class
+/HarryPotter1.class
+/HolidayCard.class
+/Houses.class
+/JamesBond.class
+/Jeopardy.class
+/Jukebox.class
+/Kanvar.class
+/Kanvar2.class
+/Kettle$Water.class
+/Kettle.class
+/Main.class
+/Microwave.class
+/Microwave2.class
+/Month.class
+/Movie1.class
+/Name.class
+/Netflix.class
+/NetflixQueue.class
+/PhotoAlbum.class
+/PhotoQuiz1.class
+/PigLatin.class
+/Popcorn.class
+/Popcorn2.class
+/RunnerDwarfs.class
+/ScaryMaze.class
+/SeaCreature.class
+/SeaCreatureRunner.class
+/SensitiveKeyboard.class
+/SimonSays.class
+/SimonSaysRecipe.class
+/Smurf.class
+/SmurfRunner.class
+/Snake.class
+/Snake2.class
+/Song$1.class
+/Song.class
+/SoupMaker.class
+/Spiral3.class
+/Tictactoe.class
+/TurtlePond.class
+/TypingTutor.class
+/Vault.class
+/WritingMethod.class
+/animal1.class
+/chuckel.class
+/classCat.class
+/cowTimer1.class
+/drumKit.class
+/drumKit2.class
+/fortuneCookie.class
+/foursquare.class
+/harryPotter.class
+/photoQuiz.class
+/slotMachine.class
+/triangleshell2.class
