--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,3 @@
-/398818RXBF.jpg
 /Backpack.class
 /BinaryBlaster.class
 /BinaryC.class
@@ -12,37 +11,12 @@
 /Code4Life.class
 /CoinChanger.class
 /CowTimer.class
+/CupOfSoup.class
 /Dude.class
 /DudeTest.class
 /DuellingButtons.class
 /DuellingButtons2.class
 /Dwarf.class
-/Fortuneball.jpg
-/I Like Chicken (Sing-along).mp3
-/My.jpg
-/Pencil.class
-/Pony.png
-/Present.class
-/Ruler.class
-/ScaryMaze.jpg
-/ScaryMaze.png
-/Supplies.class
-/Textbook.class
-/base (1).wav
-/base.wav
-/cymbal.jpg
-/downArrow.jpg
-/gridworld.jar
-/gridworld2.jar
-/images.png
-/joke.wav
-/leftArrow.png
-/rightArrow.jpg
-/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
-/scary_clown_faces-1.jpg
-/upArrow.png
-/weirdman.jpg
-/CupOfSoup.class
 /FortuneTeller.class
 /GridWorld1.class
 /HarryPotter1.class
@@ -63,11 +37,14 @@
 /Name.class
 /Netflix.class
 /NetflixQueue.class
+/Pencil.class
 /PhotoAlbum.class
 /PhotoQuiz1.class
 /PigLatin.class
 /Popcorn.class
 /Popcorn2.class
+/Present.class
+/Ruler.class
 /RunnerDwarfs.class
 /ScaryMaze.class
 /SeaCreature.class
@@ -83,6 +60,8 @@
 /Song.class
 /SoupMaker.class
 /Spiral3.class
+/Supplies.class
+/Textbook.class
 /Tictactoe.class
 /TurtlePond.class
 /TypingTutor.class
@@ -100,3 +79,4 @@
 /photoQuiz.class
 /slotMachine.class
 /triangleshell2.class
+/Unicorn.class
