--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,13 +1,4 @@
-/CowTimer.class
 /CupOfSoup.class
-/Dude.class
-/DudeTest.class
-/DuellingButtons.class
-/DuellingButtons2.class
-/Dwarf.class
-/FortuneTeller.class
-/GridWorld1.class
-/HarryPotter1.class
 /HolidayCard.class
 /Houses.class
 /JamesBond.class
@@ -65,3 +56,5 @@
 /photoQuiz.class
 /slotMachine.class
 /triangleshell2.class
+/GetFriends.class
+/Classmate.class
