--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,4 +1,27 @@
+/Backpack.class
+/BinaryBlaster.class
+/BinaryC.class
+/BookOfIllusions.class
+/Box.class
+/Cat.class
+/Celeberty.class
+/ChangeMaker.class
+/ChuckleClicker.class
+/ChuckleClicker2.class
+/Classmate.class
+/Code4Life.class
+/CoinChanger.class
+/CowTimer.class
 /CupOfSoup.class
+/Dude.class
+/DudeTest.class
+/DuellingButtons.class
+/DuellingButtons2.class
+/Dwarf.class
+/FortuneTeller.class
+/GetFriends.class
+/GridWorld1.class
+/HarryPotter1.class
 /HolidayCard.class
 /Houses.class
 /JamesBond.class
@@ -16,11 +39,14 @@
 /Name.class
 /Netflix.class
 /NetflixQueue.class
+/Pencil.class
 /PhotoAlbum.class
 /PhotoQuiz1.class
 /PigLatin.class
 /Popcorn.class
 /Popcorn2.class
+/Present.class
+/Ruler.class
 /RunnerDwarfs.class
 /ScaryMaze.class
 /SeaCreature.class
@@ -36,7 +62,9 @@
 /Song.class
 /SoupMaker.class
 /Spiral3.class
+/Supplies.class
 /TextOption.class
+/Textbook.class
 /Tictactoe.class
 /TurtlePond.class
 /TypingTutor.class
@@ -56,5 +84,3 @@
 /photoQuiz.class
 /slotMachine.class
 /triangleshell2.class
-/GetFriends.class
-/Classmate.class
