--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,88 +1,1 @@
-/Backpack.class
-/BinaryBlaster.class
-/BinaryC.class
-/BookOfIllusions.class
-/Box.class
-/Cat.class
-/Celeberty.class
-/ChangeMaker.class
-/ChuckleClicker.class
-/ChuckleClicker2.class
-/Classmate.class
-/Code4Life.class
-/CoinChanger.class
-/CowTimer.class
-/CupOfSoup.class
-/Dude.class
-/DudeTest.class
-/DuellingButtons.class
-/DuellingButtons2.class
-/Dwarf.class
-/FortuneTeller.class
-/GetFriends.class
-/GridWorld1.class
-/HarryPotter1.class
-/HolidayCard.class
-/Houses.class
-/JamesBond.class
-/Jeopardy.class
-/Jukebox.class
-/Kanvar.class
-/Kanvar2.class
-/Kettle$Water.class
-/Kettle.class
-/Main.class
-/Microwave.class
-/Microwave2.class
-/Month.class
-/Movie1.class
-/Name.class
-/Netflix.class
-/NetflixQueue.class
-/Pencil.class
-/PhotoAlbum.class
-/PhotoQuiz1.class
-/PigLatin.class
-/Popcorn.class
-/Popcorn2.class
-/Present.class
-/Ruler.class
-/RunnerDwarfs.class
-/ScaryMaze.class
-/SeaCreature.class
-/SeaCreatureRunner.class
-/SensitiveKeyboard.class
-/SimonSays.class
-/SimonSaysRecipe.class
-/Smurf.class
-/SmurfRunner.class
-/Snake.class
-/Snake2.class
-/Song$1.class
-/Song.class
-/SoupMaker.class
-/Spiral3.class
-/Supplies.class
-/TextOption.class
-/Textbook.class
-/Tictactoe.class
-/TurtlePond.class
-/TypingTutor.class
-/Unicorn.class
-/Vault.class
-/WhackAMole.class
-/WritingMethod.class
-/animal1.class
-/chuckel.class
-/classCat.class
-/cowTimer1.class
-/drumKit.class
-/drumKit2.class
-/fortuneCookie.class
-/foursquare.class
-/harryPotter.class
-/photoQuiz.class
-/slotMachine.class
-/triangleshell2.class
-/ChuckleClicker1.class
-/SpamALot.class
+/SpamALot$1.class
