--- a/.classpath
+++ b/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/javazoom.jar"/>
 	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/gridworld.jar"/>
 	<classpathentry kind="lib" path="/Users/league/Google Drive/league-jars/Tortoise.jar"/>
+	<classpathentry kind="lib" path="/Users/league/Downloads/mail.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
