Worked on Spelling bee and Simple Calculator

--- a/bin/.gitignore
+++ b/bin/.gitignore
@@ -1,114 +1,1 @@
-/398818RXBF.jpg
-/Backpack.class
-/BinaryBlaster.class
-/BinaryC.class
-/BookOfIllusions.class
-/Box.class
-/Cat.class
-/Celeberty.class
-/ChangeMaker.class
-/ChuckleClicker.class
-/ChuckleClicker1.class
-/ChuckleClicker2.class
-/Classmate.class
-/Code4Life.class
-/CoinChanger.class
-/CowTimer.class
-/CupOfSoup.class
-/CutenessTv.class
-/Dude.class
-/DudeTest.class
-/DuellingButtons.class
-/DuellingButtons2.class
-/Dwarf.class
-/FortuneTeller.class
-/Fortuneball.jpg
-/GetFriends.class
-/GridWorld1.class
-/HarryPotter1.class
-/HolidayCard.class
-/Houses.class
-/I Like Chicken (Sing-along).mp3
-/Ice.class
-/JamesBond.class
-/Jeopardy.class
-/Jukebox.class
-/Kanvar.class
-/Kanvar2.class
-/Kettle$Water.class
-/Kettle.class
-/Main.class
-/Microwave.class
-/Microwave2.class
-/Month.class
-/Movie1.class
-/My.jpg
-/Name.class
-/Netflix.class
-/NetflixQueue.class
-/Pencil.class
-/PhotoAlbum.class
-/PhotoQuiz1.class
-/PigLatin.class
-/Pony.png
-/Popcorn.class
-/Popcorn2.class
-/Present.class
-/Ruler.class
-/RunnerDwarfs.class
-/ScaryMaze.class
-/ScaryMaze.jpg
-/ScaryMaze.png
-/SeaCreature.class
-/SeaCreatureRunner.class
-/SensitiveKeyboard.class
-/SimonSays.class
-/SimonSaysRecipe.class
-/Smurf.class
-/SmurfRunner.class
-/Snake.class
-/Snake2.class
-/Song$1.class
-/Song.class
-/SoupMaker.class
-/SpamALot.class
-/SpellingBee.class
-/Spiral3.class
-/Supplies.class
-/TeaParty.class
-/TextOption.class
-/Textbook.class
-/Tictactoe.class
-/TypingTutor.class
-/Unicorn.class
-/Vault.class
-/WhackAMole.class
-/WritingMethod.class
-/animal1.class
-/base (1).wav
-/base.wav
-/chuckel.class
-/classCat.class
-/cymbal.jpg
-/downArrow.jpg
-/gridworld.jar
-/gridworld2.jar
-/images.png
-/joke.wav
-/leftArrow.png
-/mail.jar
-/rightArrow.jpg
-/scary!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!!.wav
-/scary_clown_faces-1.jpg
-/upArrow.png
-/weirdman.jpg
-/TurtlePond.class
-/cowTimer1.class
-/drumKit.class
-/drumKit2.class
-/fortuneCookie.class
-/foursquare.class
-/harryPotter.class
-/photoQuiz.class
-/slotMachine.class
-/triangleshell2.class
+/SimpleCalculator.class
